Header extra padding fixed

--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -4,6 +4,7 @@
         height: 90%;
         margin: 0rem;
         z-index: 11;
+        padding: 1.5rem 0.5rem;
     }
     .form-step {
         width: 20%;
