--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -56,7 +56,7 @@
 
   .modal-header{
     width: 100%;
-    height: 10%;
+    height: 7%;
     background-color: rgb(0, 0, 0);
     color: rgb(250, 197, 38);
     display: flex;
@@ -64,9 +64,10 @@
     align-items:center;
   }
 
+
   .modal-body{
     width: 100%;
-    height: 90%;
+    height: 93%;
     background-color: rgb(43, 43, 43);
 
   }
@@ -101,7 +102,31 @@
      
     }
   
+    .modal-header{
+      width: 100%;
+      height: 8%;
+      padding: 0.5rem 1.5rem 0 1.5rem ;
+      background-color: rgb(0, 0, 0);
+      color: rgb(250, 197, 38);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
+    .modal-header .modal-title, .modal-header .closeBtn{
+      font-size: 1.8rem;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: lighter;
+      color: white;
+      margin: 0rem;
+    }
+  
+    .modal-body{
+      width: 100%;
+      height: 92%;
+      background-color: rgb(43, 43, 43);
+  
+    }
 
 
 
